# get_chunk

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci_cd.yml
src/: data_size_format.rs  lib.rs  main.rs  mem.rs
src/chunk/: iterator.rs  mod.rs  stream.rs
src/chunk/iterator/: mod.rs
tests/: api.rs  data_size_format.rs  iterator.rs  stream.rs
tests/temp_files/: mod.rs
