[package]

name = "get_chunk"
version = "1.0.1"
edition = "2021"
description = "File iterator or stream with auto or manual chunk size selection"
repository = "https://github.com/m62624/get_chunk"
categories = ["asynchronous", "filesystem", "memory-management"]
keywords = ["file", "async-io", "chunk"]
license = "MIT"
exclude = [
    ".github",
    "tests",
    ".gitignore",
    ".dockerignore",
    "Dockerfile",
    "README.md",
    "Cargo.lock",
]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
strum = { version = "0.25.0", optional = true }
strum_macros = { version = "0.25.3", optional = true }

tokio = { version = "1.35.1", features = [
    "rt",
    "fs",
    "io-util",
], optional = true }
tokio-stream = { version = "0.1.14", optional = true }

sysinfo = "0.30.0"

[dev-dependencies]
uuid = { version = "1.6.1", features = ["v4"] }
home = "0.5.9"
rand = "0.8.5"
sha2 = "0.10.8"

[lib]
doctest = false

[features]

# Dependencies for asynchronous stream handling with Tokio.
stream = ["dep:tokio-stream", "dep:tokio"]

# Dependencies for size formatting using Strum and Strum_macros.
# Size formatting provides a convenient way to specify chunk sizes in
# megabytes, mebibytes, etc., or view file sizes in different formats (bytes, MB, MiB, etc.).
size_format = ["dep:strum", "dep:strum_macros"]

# Dependencies for unit tests using Tokio macros and a multi-threaded runtime.
tests = ["tokio/macros", "tokio/rt-multi-thread"]

docs_fix = ["tokio/net"]
# activates impl debug
debug = []
