[package]

name = "get_chunk"
version = "1.2.2"
edition = "2021"
description = "File iterator or stream with auto or manual chunk size selection"
repository = "https://github.com/m62624/get_chunk"
categories = ["asynchronous", "rust-patterns"]
keywords = ["file", "iterator", "async-io", "chunk"]
license = "MIT"
exclude = [
    ".github",
    "tests",
    ".gitignore",
    ".dockerignore",
    "Dockerfile",
    "README.md",
    "Cargo.lock",
]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
strum = { version = "0.26.3", optional = true }
strum_macros = { version = "0.26.4", optional = true }

tokio = { version = "1.38.0", features = [
    "rt",
    "fs",
    "io-util",
], optional = true }
tokio-stream = { version = "0.1.15", optional = true }

sysinfo = "0.30.12"
async-trait = { version = "0.1.80", optional = true }

[dev-dependencies]
uuid = { version = "1.9.1", features = ["v4"] }
home = "0.5.9"
rand = "0.8.5"
sha2 = "0.10.8"

[lib]
doctest = false

[features]

# Dependencies for asynchronous stream handling with Tokio.
stream = ["dep:tokio-stream", "dep:tokio", "dep:async-trait"]

# Dependencies for size formatting using Strum and Strum_macros.
# Size formatting provides a convenient way to specify chunk sizes in
# megabytes, mebibytes, etc., or view file sizes in different formats (bytes, MB, MiB, etc.).
size_format = ["dep:strum", "dep:strum_macros"]

# Dependencies for unit tests using Tokio macros and a multi-threaded runtime.
tests = ["tokio/macros", "tokio/rt-multi-thread"]

docs_fix = ["tokio/net"]
# activates impl debug
debug = []
